 * Add support for Twitter and other text-only embeds in Draftail embed previews (Iman Syed, Paarth Agarwal)
 * Use new modal dialog component for privacy settings modal (Sage Abdullah)
 * Add `menu_item_name` to modify MenuItem's name for ModelAdmin (Alexander Rogovskyy, Vu Pham)
 * Add an extra confirmation prompt when deleting pages with a large number of child pages (Jaspreet Singh)
 * Adopt the slim header in page listing views, with buttons moved under the "Actions" dropdown (Paarth Agarwal)
 * Improve help block styles in Windows High Contrast Mode with less reliance on communication via colour alone (Anuja Verma)
 * Add a bottom border to top messages so they stand out from the header (Anuja Verma)
 * Replace latin abbreviations (i.e. / e.g.) with common English phrases so that documentation is easier to understand (Dominik Lech)
 * Add shortcut for accessing StreamField blocks by block name with new `blocks_by_name` and `first_block_by_name` methods on `StreamValue` (Tidiane Dia, Matt Westcott)
 * Extend support for custom user interface colours across almost all admin colours (Thibaud Colas)
 * Add HTML-aware max_length validation on RichTextField and RichTextBlock (Matt Westcott)
 * Remove undocumented `SearchableListMixin` (Sage Abdullah)
 * Extract filtering code from ReportView to generic IndexView (Sage Abdullah)
 * Retain other query params in header search behaviour (Sage Abdullah)
 * Fix: Typo in `ResumeWorkflowActionFormatter` message (Stefan Hammer)
 * Fix: Throw a meaningful error when saving an image to an unrecognised image format (Christian Franke)
 * Fix: Remove extra padding for headers with breadcrumbs on mobile viewport (Steven Steinwand)
 * Fix: Ensure that custom document or image models support custom tag models (Matt Westcott)
 * Fix: Ensure comments use translated values for their placeholder text (Stefan Hammer)