@@ -79,7 +79,6 @@ class BaseDropdownMenuButton(Button):
             "buttons": self.dropdown_buttons,
             "label": self.label,
             "title": self.attrs.get("title"),
-            "is_parent": self.is_parent,
         }
 
     def render(self):
@@ -108,13 +107,10 @@ class ButtonWithDropdown(BaseDropdownMenuButton):
 class ButtonWithDropdownFromHook(BaseDropdownMenuButton):
     template_name = "wagtailadmin/pages/listing/_button_with_dropdown.html"
 
-    def __init__(
-        self, label, hook_name, page, page_perms, is_parent, next_url=None, **kwargs
-    ):
+    def __init__(self, label, hook_name, page, page_perms, next_url=None, **kwargs):
         self.hook_name = hook_name
         self.page = page
         self.page_perms = page_perms
-        self.is_parent = is_parent
         self.next_url = next_url
 
         super().__init__(label, **kwargs)
@@ -129,9 +125,7 @@ class ButtonWithDropdownFromHook(BaseDropdownMenuButton):
 
         buttons = []
         for hook in button_hooks:
-            buttons.extend(
-                hook(self.page, self.page_perms, self.is_parent, self.next_url)
-            )
+            buttons.extend(hook(self.page, self.page_perms, self.next_url))
 
         buttons.sort()
         return buttons
