@@ -165,9 +165,7 @@ def register_relax_menu_item(menu_items, request, context):
 
 
 @hooks.register("construct_page_listing_buttons")
-def register_page_listing_button_item(
-    buttons, page, page_perms, is_parent=False, context=None
-):
+def register_page_listing_button_item(buttons, page, page_perms, context=None):
     item = Button(
         label="Dummy Button",
         url="/dummy-button",
